# MoonSwitch2

./: CMakeLists.txt  README.md
docs/: index.js
src/: main.cpp
src/include/: globalvalues.h
webgame/: index.data  index.wasm
